fix gap on right sided panel

--- a/design/custom.css
+++ b/design/custom.css
@@ -374,6 +374,7 @@ body.HamburgerOpen #Frame {
 }
 
 body > #Frame > .Head {
+	width: 100%;
 	padding-left: 10px;
 	margin-left: 0;
 }
